# bh3ai

backend/: pyproject.toml
backend/config/: loaders.yaml
backend/storage/: default__vector_store.json  docstore.json  index_store.json
frontend/: package.json
