[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [ "Marcus Schiesser <mail@marcusschiesser.de>" ]
readme = "README.md"

[tool.poetry.scripts]
generate = "app.engine.generate:generate_datasource"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.109.1"
python-dotenv = "^1.0.0"
llama-index = "0.10.28"
llama-index-core = "0.10.28"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.23.2"

[tool.poetry.dependencies.llama-index-readers-web]
version = "^0.1.6"

[tool.poetry.dependencies.llama-index-llms-ollama]
version = "0.1.2"

[tool.poetry.dependencies.llama-index-embeddings-ollama]
version = "0.1.2"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"